--- a/Discover-Card-Phone/res/layout/modal_default_one_button_bottom.xml
+++ b/Discover-Card-Phone/res/layout/modal_default_one_button_bottom.xml
@@ -3,7 +3,9 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:layout_marginLeft="@dimen/forms_inner_padding"
-    android:layout_marginRight="@dimen/forms_inner_padding" >
+    android:layout_marginRight="@dimen/forms_inner_padding" 
+    android:background="@drawable/card_popup_whitebg"
+    >
 
     <View
         android:id="@+id/modal_alert_divider"
