--- a/Discover-Card-Phone/res/layout/register_forgot_type_select_option_item.xml
+++ b/Discover-Card-Phone/res/layout/register_forgot_type_select_option_item.xml
@@ -2,26 +2,30 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="horizontal">
+    android:orientation="horizontal" >
 
     <TextView
         android:id="@android:id/text1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-		android:layout_alignParentLeft="true"
-		android:layout_centerVertical="true"
-        android:padding="12dip"
-		style="@style/blue_hyperlink_forgot"
-		android:textStyle="bold"/>
+        android:layout_alignParentLeft="true"
+        android:layout_centerVertical="true"
+        android:paddingBottom="16dp"
+        android:paddingTop="16dp"
+        android:paddingLeft="16dp"
+        android:textColor="@color/blue_grey"
+        android:textSize="16sp"
+        android:textStyle="normal" />
 
-     <ImageView 
-                android:id="@+id/landingPage_arrow"
-		        android:layout_width="wrap_content"
-		        android:layout_height="wrap_content"
-		        android:layout_centerVertical="true"
-		        android:layout_alignParentRight="true"
-		        android:padding="12dip"
-		        android:src="@drawable/gray_arrow_right" 
-		       />
-     
-</RelativeLayout>	
+    <ImageView
+        android:id="@+id/landingPage_arrow"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:paddingBottom="16dp"
+        android:paddingTop="16dp"
+        android:paddingRight="16dp" 
+        android:src="@drawable/card_forwardarrow_btn" />
+
+</RelativeLayout>
