US9883 - 13.4 Analytics. Added analytics calls to the select a payee landing page along with a call to analitics whenever a generic modal is shown for an unhandled error or 500 from the server. Also fixed an issue where pages woudl not get tracked if a user is in a workflow, presses back, then goes back into the workflow from the menu.

--- a/Discover-Bank-Phone/res/values/strings_bank_analytics.xml
+++ b/Discover-Bank-Phone/res/values/strings_bank_analytics.xml
@@ -17,4 +17,6 @@
     <string name="bank_capture_confirm">confirm_authorize-pg</string>
     <string name="bank_capture_sending">transmitting_animation-pg</string>
     <string name="bank_capture_acknowledge">acknowledgement-pg</string>
+    <string name="bank_select_payee">payment_payee-pg</string>
+    <string name="bank_internal_server_analytics_error">500_error-pg</string>
 </resources>
