--- a/Discover-Launch/assets/www/css/discoverMain.css
+++ b/Discover-Launch/assets/www/css/discoverMain.css
@@ -557,6 +557,15 @@ padding: 3px 8px 3px 8px;
                 color: #09C !important;
                 text-decoration: none;
 }
+
+/***R13.4 Change for MAP Step 1 Button disable***/
+#paymentStep1-pg .ui-disabled {	
+	border-radius: 0px !important;
+     -webkit-border-radius: 0px !important;
+      border: 0px !important;
+      padding: 0 0px 0 0px !important;
+
+}
 /************************************************************************************************/
 /******************* Please uncomment below 2 classes to hide header and footer *****************/
 .ui-page.ui-body-c, .ui-page-active {padding-top:0px !important; padding-bottom:0px !important;}
