--- a/Discover-Card-Phone/res/layout/passcode_base_activity.xml
+++ b/Discover-Card-Phone/res/layout/passcode_base_activity.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
     android:longClickable="false"
+    android:clickable="true"
     android:orientation="vertical" >
 
     <TextView
@@ -15,13 +16,16 @@
         android:paddingTop="10dp"
         android:layout_marginBottom="20dp"
         android:textColor="@color/black"
-        android:textSize="20sp"
+        android:textSize="18sp"
         android:typeface="sans" />
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:id="@+id/passcodeFields"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal" >
+        android:layout_below="@+id/headerTV"
+        android:layout_centerHorizontal="true"
+         >
 
         <EditText
             android:id="@+id/passcode01"
@@ -57,16 +61,20 @@
             android:gravity="center"
             android:inputType="phone" />
 
-        <ImageView
-            android:id="@+id/validation"
-            android:src="@drawable/tick_green"
-            android:visibility="invisible"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginLeft="3dp"
-             />
     </LinearLayout>
+
+     <ImageView
+         android:id="@+id/validation"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:layout_gravity="center"
+         android:layout_marginLeft="3dp"
+         android:src="@drawable/tick_green"
+         android:layout_toRightOf="@+id/passcodeFields"
+         android:layout_alignBottom="@+id/passcodeFields"
+         android:layout_alignTop="@+id/passcodeFields"
+         android:visibility="invisible"
+          />
 
     <TextView
         android:id="@+id/passcodeGuidelines"
@@ -77,6 +85,7 @@
         android:layout_marginLeft="12dp"
         android:layout_marginTop="20dp"
         android:text="@string/passcode_guidelines_link"
+        android:layout_below="@+id/passcodeFields"
         android:textSize="16sp"
         android:textStyle="bold" />
     
@@ -85,11 +94,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:layout_weight="0.8"
         android:gravity="bottom"
         android:overScrollMode="never" >
 
         <include layout="@layout/card_fragment_footer" />
     </RelativeLayout>
 
-</LinearLayout>
+</RelativeLayout>
