--- a/Discover-Card-Phone/res/layout/passcode_enable_step_1.xml
+++ b/Discover-Card-Phone/res/layout/passcode_enable_step_1.xml
@@ -4,6 +4,7 @@
     android:layout_height="fill_parent"
     android:background="@color/white"
     android:orientation="vertical"
+    android:clickable="true"
     android:padding="10dp" >
 
     <TextView
