--- a/Discover-Card-Phone/res/layout/register_create_password.xml
+++ b/Discover-Card-Phone/res/layout/register_create_password.xml
@@ -49,7 +49,7 @@
                     android:layout_marginTop="@dimen/forms_inner_padding"
                     android:contentDescription="@string/discover_copyright_text"
                     android:paddingTop="4dp"
-                    android:src="@drawable/esclamation_red_img"
+                    android:src="@drawable/exclamation_red_img"
                     android:visibility="gone" />
 
                 <TextView
@@ -193,15 +193,17 @@
             <Button
                 android:id="@+id/account_info_two_submit_button"
                 android:layout_width="wrap_content"
-                android:layout_height="42dp"
+                android:layout_height="wrap_content"
                 android:layout_below="@+id/account_info_two_pass_confirm_field"
                 android:layout_centerHorizontal="true"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="36dp"
                 android:background="@drawable/card_action_orange_button"
                 android:onClick="checkInputsThenSubmit"
-                android:paddingLeft="20dp"
-                android:paddingRight="20dp"
+                android:paddingLeft="38dp"
+                android:paddingRight="38dp"
+                android:paddingTop="15dp"
+                android:paddingBottom="15dp"
                 android:text="@string/submit_text"
                 android:textColor="@color/white"
                 android:textSize="20dp"
