--- a/Discover-Card-Phone/res/layout/register_forgot_id.xml
+++ b/Discover-Card-Phone/res/layout/register_forgot_id.xml
@@ -116,16 +116,18 @@
             <Button
                 android:id="@+id/forgot_id_submit_button"
                 android:layout_width="wrap_content"
-                android:layout_height="42dp"
+                android:layout_height="wrap_content"
                 android:layout_below="@+id/forgot_id_password_field"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="40dp"
                 android:background="@drawable/card_action_orange_button"
-                android:paddingLeft="20dp"
-                android:paddingRight="20dp"
+                android:paddingLeft="38dp"
+                android:paddingRight="38dp"
+                android:paddingTop="15dp"
+                android:paddingBottom="15dp"
                 android:text="@string/submit_text"
                 android:textColor="@color/white"
-                android:textSize="20sp"
+                android:textSize="20dp"
                 android:textStyle="bold" />
 
             <TextView
