--- a/Discover-Bank-Phone/res/layout/login_start.xml
+++ b/Discover-Bank-Phone/res/layout/login_start.xml
@@ -146,7 +146,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/password_label"
-                        android:layout_marginBottom="20dp"
+                        android:layout_marginBottom="@dimen/between_related_elements_padding"
                         android:hint="@string/password"
                         android:textColorHint="@color/transparentGray"
                         android:inputType="textPassword"
@@ -370,9 +370,8 @@
                     android:id="@+id/account_toggle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
                     android:layout_below="@id/regular_login"
-                    android:paddingTop="@dimen/between_related_elements_padding" >
+                    android:layout_marginTop="@dimen/between_related_elements_padding" >
 
                     <!-- Divider -->
 
@@ -390,6 +389,7 @@
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/login_horizontal_divider"
                         android:orientation="horizontal"
+                        android:baselineAligned="false"
                         android:paddingBottom="@dimen/bottom_pad"
                         android:paddingLeft="@dimen/left_pad"
                         android:paddingRight="@dimen/right_pad"
