--- a/Discover-Launch/assets/www/card/css/referAFriend.css
+++ b/Discover-Launch/assets/www/card/css/referAFriend.css
@@ -5,7 +5,7 @@
 .raf-page .new-messages{color:#fff;font-size:10px;margin-right:3px;float:right;}
 
 
-.raf-page .icon_faqs{float:right;/*margin-top:-7px;*/}
+/*.raf-page .icon_faqs{float:right;/*margin-top:-7px; backlog changes*/
 
 .raf-page  .ui-content-internalpages .text-below-orange-text{font-size:12px;width:70%;float:left;margin-top:3px;text-align:left;}
 
