--- a/Discover-Launch/assets/www/card/css/R13.4.css
+++ b/Discover-Launch/assets/www/card/css/R13.4.css
@@ -245,7 +245,8 @@
 .payments .ddHighlightError {
 	border-bottom: 1px solid #ed1c24;
 }
-.payments .ddHighlightErrorArrow {
+.payments .ddHighlightError .arrow{
+
 	border-bottom: 12px solid #ed1c24;
 }
 .payments .ui-content {
@@ -644,9 +645,9 @@ line-height: 17px;}*/
 	font-size: 16px;
 	color: #B9C1C5;
 }
-#paymentStep1-pg .payDate {
-	padding-top: 10px;
-	width: 34%;
+#paymentStep1-pg .ui-content .white-form .payDate {
+    padding-top: 10px;
+    width: 34%;
 }
 #paymentStep1-pg .ui-content .datealign {
 	float: right;
@@ -656,10 +657,10 @@ line-height: 17px;}*/
 	float: left;
 }
 #paymentStep1-pg .ui-content .datealign .detailsList li {
-	padding: 4px 6px !important;
+	padding: 0px 6px !important;
 }
 #paymentStep1-pg .ui-content .datealign .detailsList {
-	margin: 7px 0px 13px 0px;
+	margin: 0px 0px 13px 0px;
 }
 #paymentStep1-pg .dateList {
 	width: 76%;
@@ -1021,6 +1022,13 @@ line-height: 17px;}*/
 	padding: 13px 13px 0 15px;
 }
 
+#manageBankAccDetails-pg .wraper .pendingPaymentMsg {		/* Defect_104897_New starts */
+	padding: 13px 0px 0 15px;
+	float:left;
+}
+#manageBankAccDetails-pg div[data-role="content"] {
+	margin-bottom:50px;
+}		/* Defect_104897_New ends */
 .payments .wraper .pendingPaymentMsg p{
 	font-size: 18px;
 	color: #293033;
@@ -1077,11 +1085,12 @@ line-height: 17px;}*/
 	text-decoration: none;
 }
 
-.payments .errormsg {
+.payments .errormsg {	/* Defect_104776_New starts */
 	float: left;
-	width: 88%;
+	width: 100%;
 	margin: 10px 0 0 0;
-}
+	font-size:14px !important;
+}		/* Defect_104776_New ends */
 .payments .errOther, .payments .errOther1, .payments .errOther2 {
 	margin: 10px 0 0 0;
 	color: #ed1c24 !important;
