US7225 - 13.4 - 07/19/2013 Clearcase Merge - Discover-Card Project

--- a/Discover-Card-Phone/res/layout/register_forgot_type_select.xml
+++ b/Discover-Card-Phone/res/layout/register_forgot_type_select.xml
@@ -43,7 +43,7 @@
                 android:background="@color/card_body_color"
                 android:divider="@color/card_line_separator"
                 android:dividerHeight="1dp"
-                android:footerDividersEnabled="false"
+                android:scrollbars="none"
                 >
             </ListView>
 
