--- a/Discover-Card-Phone/res/values/color.xml
+++ b/Discover-Card-Phone/res/values/color.xml
@@ -98,6 +98,6 @@
    <color name="card_body_color">#f8fafa</color>
    <color name="card_hint_color">#b9c1c5</color>
    <color name="card_line_separator">#d0d0d0</color>
-   
+   <color name="button_disable">#BDBDBD</color> 
  
 </resources>
