--- a/Discover-Card-Phone/res/values/error_code_mapping.xml
+++ b/Discover-Card-Phone/res/values/error_code_mapping.xml
@@ -16,7 +16,7 @@
     <!-- 4031101 & 4032112 - Lockout -->
     <string name="E_4031101">
         <![CDATA[
-        We know you’re excited to get into the app, but you’ve tried to log in with the wrong username or password too many times. 
+        We know you’re excited to get into the app, but you’ve tried to log in with the wrong information too many times. 
         <br/><br/>Please contact Customer Service at 1-877-742-7822 for assistance.
 		]]>
 	</string>
@@ -470,7 +470,7 @@
     <string name="E_103">Bad Request!</string>
     <string name="E_T_104">Connection Problem!</string>
     <string name="E_104">Could not connect to the server!</string>
-    <string name="E_SA_SKIPPED_CONTENT">Some of our website features are unavailable at this time. We sincerely apologize for the inconvenience and are working to resolve the issue.</string>
+    <string name="E_SA_SKIPPED_CONTENT">Some of our website features are unavailable at this time. We sincerely apologize for this temporary inconvenience and are working to resolve the issue.</string>
     <string name="E_SA_SKIPPED_TITLE">We\'re Sorry</string>
 
 </resources>
